# OxidOH

./: .gitignore  Cargo.toml  README.md  build_android.sh
.github/workflows/: android.yml  audit.yml  release.yml
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/oxidoh/: BootReceiver.kt  MainActivity.kt  ProxyService.kt  ProxyTileService.kt
android/app/src/main/java/io/github/oxidoh/ui/theme/: Theme.kt
android/app/src/main/java/io/github/sms1sis/oxidoh/: BootReceiver.kt  MainActivity.kt  ProxyService.kt  ProxyTileService.kt
android/app/src/main/java/io/github/sms1sis/oxidoh/ui/components/: AboutDialog.kt  DrawerContent.kt  StatusHero.kt
android/app/src/main/java/io/github/sms1sis/oxidoh/ui/screens/: AppSelectionScreen.kt  DashboardScreen.kt  LogScreen.kt  StatsScreen.kt
android/app/src/main/java/io/github/sms1sis/oxidoh/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_stat_shield.xml
android/app/src/main/res/values/: strings.xml  themes.xml
src/: lib.rs  main.rs
