[package]
name = "oxidoh"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["rustls", "socks", "http2", "http3", "gzip", "deflate"], default-features = false }
hickory-resolver = "0.25" # Formerly trust-dns
odoh-rs = "1.0"
dnsstamps = "0.1"
anyhow = "1"
bytes = "1"
jni = { version = "0.21", optional = true }
android_logger = "0.15"
log = "0.4"
base64 = "0.22"
rand = "0.9"
futures-util = "0.3"
hex = "0.4"
tokio-util = "0.7"
chrono = "0.4"
moka = { version = "0.12", features = ["future"] }
rustls-platform-verifier = { version = "0.6", features = ["jni"] }
tracing = "0.1.44"
getrandom = "0.4"
clap = { version = "4.5.57", features = ["derive"] }
tracing-subscriber = "0.3.22"
regex = "1.12.3"
socket2 = { version = "0.6.2", features = ["all"] }



[features]
default = ["jni"]
jni = ["dep:jni"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
